--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>localStronge</title>
+    <title>Document</title>
 </head>
 <body>
-   <div>
-    <span>your name</span>
-    <input id="name" type="text" autocomplete="off">
-    <button id="bt1">Submit</button>
-   </div>
-   <div>
-    <hr>
-    <span>Ten cua ban la : </span><span id="mess"></span>
-   </div>
-   <script src="./main.js"></script>
+    
 </body>
 </html>
