--- a/src/lab04/index.html
+++ b/src/lab04/index.html
@@ -12,7 +12,7 @@
         <input type="text" id="username" placeholder="username">
         <br>
         <span>Password</span>
-        <input type="text" id="pass">
+        <input type="text" id="pass" placeholder="password">
         <br>
         <button id="bt1">Đăng Nhập</button>
     </div>
